Add totalPages to responses